Fixed navigation on mobile.

--- a/style.scss
+++ b/style.scss
@@ -166,28 +166,29 @@ header ol.categories {
 
   header ul.profiles {
     padding: 0;
+
+    li {
+      width: 30px !important;
+      height: 30px !important;
+      margin-left: 5px;
+      &:first-of-type {
+        margin-left: 0;
+        padding-left: 0;
+      }
+    }
+
+    li a img {
+      width: 30px;
+      height: 30px;
+    }
   }
 
-  header ul.profiles li {
-    width: 30px !important;
-    height: 30px !important;
-    margin-left: 5px;
-  }
-
-  header ul.profiles li a img {
-    width: 30px;
-    height: 30px;
-  }
-
-  header ul.categories {
+  header ol.categories {
     padding-left: 0;
-  }
 
-  header ul.categories li {
-    display: inline-block;
-    margin-left: 10px;
-    &:first-of-type {
-      margin-left: 0;
+    li {
+      display: inline-block;
+      margin-left: 10px;
     }
   }
 
